--- a/arguio/package.json
+++ b/arguio/package.json
@@ -25,6 +25,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "openai": "^3.0.0",
     "typescript": "4.8.4"
   }
 }
