--- a/arguio/package.json
+++ b/arguio/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "axios": "^0.27.2",
+    "firebase": "^9.12.1",
     "framer-motion": "^7.5.1",
     "next": "12.3.1",
     "react": "18.2.0",
